docs(report): add trigger comment `folder/report.html`

--- a/folder/report.html
+++ b/folder/report.html
@@ -300,5 +300,6 @@
         <a href="https://github.com/bniladridas/organic-typing/pulls" style="color: var(--brand-color); text-decoration: none;">Pulls</a> |
         <a href="https://github.com/bniladridas/organic-typing/security" style="color: var(--brand-color); text-decoration: none;">Security</a>
     </footer>
+    <!-- Trigger workflow -->
 </body>
 </html>
